--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
       </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="models/expense.model.js"></script>
+    <script src="services/expense.service.js"></script>
+    <script src="controllers/expense.controller.js"></script>
+    <script src="views/expense.view.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
